<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="E_STATE_AMPEL" Id="{6dcfc744-7ec7-43d7-8a64-39352b7b509f}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_STATE_AMPEL :
(
	OFF,
	RED,
	GREEN,
	YELLOW,
	BLINK,
	ALL
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>